Split apps into separate folders and initialized them with dependencies

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "homepage": "https://github.com/alex-whan-401-advanced-javascript/CAPS#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "faker": "^5.1.0",
-    "jest": "^26.4.2"
+    "faker": "^5.1.0"
   }
 }
