Added jest dependencies

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/alex-whan-401-advanced-javascript/CAPS#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "faker": "^5.1.0"
+    "faker": "^5.1.0",
+    "jest": "^26.4.2"
   }
 }
