--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.1.0",
+    "jest": "^26.4.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   }
